
# preserve header timestamps to preserve incremental builds across
# projects
nobase_includeHEADERS_INSTALL = $(INSTALL) -D -p -c -m 644

nobase_include_HEADERS = \
    json/visitor.h \
    json/writer.inl \
    json/elements.h \
    json/test.cpp \
    json/reader.inl \
    json/elements.inl \
    json/Readme.txt \
    json/writer.h \
    json/reader.h \
    OSS/Semaphore.h \
    OSS/StackTrace.h \
    OSS/DynamicHashTable.h \
    OSS/DNS.h \
    OSS/Compress.h \
    OSS/BlockingQueue.h \
    OSS/Exception.h \
    OSS/ServiceDaemon.h \
    OSS/FramedTcpListener.h \
    OSS/FramedTcpClient.h \
    OSS/Crypto.h \
    OSS/Thread.h \
    OSS/DebugMemory.h \
    OSS/IPAddress.h \
    OSS/Endian.h \
    OSS/OSS.h \
    OSS/Logger.h \
    OSS/Net.h \
    OSS/FramedTcpConnection.h \
    OSS/BerkeleyDb.h \
    OSS/RedisClient.h \
    OSS/Cache.h \
    OSS/Core.h \
    OSS/TimedQueue.h \
    OSS/Application.h \
    OSS/IPCQueue.h \
    OSS/Exec/Process.h \
    OSS/Exec/Command.h \
    OSS/Exec/pstream.h \
    OSS/Exec/stringtoargcargv.h \
    OSS/ABNF/ABNFSIPUserInfo.h \
    OSS/ABNF/ABNFFindMatch.h \
    OSS/ABNF/ABNFSIPRequestURI.h \
    OSS/ABNF/ABNFSIPIPV4Address.h \
    OSS/ABNF/ABNFSIPURIHeaders.h \
    OSS/ABNF/ABNFSIPHexPart.h \
    OSS/ABNF/ABNFSIPGenericParam.h \
    OSS/ABNF/ABNFSignalSlot.h \
    OSS/ABNF/ABNFSIPURIParameter.h \
    OSS/ABNF/ABNFSIPUtf8NonAscii.h \
    OSS/ABNF/ABNFSIPDomainLabel.h \
    OSS/ABNF/ABNFSIPCSeq.h \
    OSS/ABNF/ABNFSIPHex4.h \
    OSS/ABNF/ABNFSIPUserParam.h \
    OSS/ABNF/ABNFSIPToken.h \
    OSS/ABNF/ABNFSIPPort.h \
    OSS/ABNF/ABNFSIPFrom.h \
    OSS/ABNF/ABNFSIPStatusLine.h \
    OSS/ABNF/ABNFSIPURIHeader.h \
    OSS/ABNF/ABNFParser.h \
    OSS/ABNF/ABNFSIPURI.h \
    OSS/ABNF/ABNFSIPNetPath.h \
    OSS/ABNF/ABNFSIPAbsoluteURI.h \
    OSS/ABNF/ABNFSIPScheme.h \
    OSS/ABNF/ABNFSIPFromSpec.h \
    OSS/ABNF/ABNFWhileNot.h \
    OSS/ABNF/ABNFSIPSrvr.h \
    OSS/ABNF/ABNFSIPMethodParam.h \
    OSS/ABNF/ABNFSIPNameAddr.h \
    OSS/ABNF/ABNFSIPDisplayName.h \
    OSS/ABNF/ABNFSIPStatusCode.h \
    OSS/ABNF/ABNFSIPUser.h \
    OSS/ABNF/ABNFSIPURIParameters.h \
    OSS/ABNF/ABNFSIPReasonPhrase.h \
    OSS/ABNF/ABNFSIPQuotedPair.h \
    OSS/ABNF/ABNFSIPTextUtf8Trim.h \
    OSS/ABNF/ABNFSIPRegName.h \
    OSS/ABNF/ABNFSIPIPV6Address.h \
    OSS/ABNF/ABNFSIPRequestLine.h \
    OSS/ABNF/ABNFSIPOpaquePart.h \
    OSS/ABNF/ABNFSIPTopLabel.h \
    OSS/ABNF/ABNFSIPHostName.h \
    OSS/ABNF/ABNFLoopUntil.h \
    OSS/ABNF/ABNFSIPHexSeq.h \
    OSS/ABNF/ABNFSIPPathSegments.h \
    OSS/ABNF/ABNFSIPQuotedString.h \
    OSS/ABNF/ABNFSIPVersion.h \
    OSS/ABNF/ABNFSIPMethod.h \
    OSS/ABNF/ABNFLRSequence.h \
    OSS/ABNF/ABNFSIPContactParam.h \
    OSS/ABNF/ABNFSIPHost.h \
    OSS/ABNF/ABNFSIPPassword.h \
    OSS/ABNF/ABNFSIPSegment.h \
    OSS/ABNF/ABNFSIPHierPart.h \
    OSS/ABNF/ABNFBaseRule.h \
    OSS/ABNF/ABNFSIPGenericParams.h \
    OSS/ABNF/ABNFSIPHostPort.h \
    OSS/ABNF/ABNFStringLiteral.h \
    OSS/ABNF/ABNF.h \
    OSS/ABNF/ABNFAnyOf.h \
    OSS/ABNF/ABNFSIPRules.h \
    OSS/ABNF/ABNFSIPAuthority.h \
    OSS/ABNF/ABNFSIPTextUtf8Char.h \
    OSS/ABNF/ABNFSIPQdText.h \
    OSS/ABNF/ABNFSIPTransportParam.h \
    OSS/Crypto/BlockCipher.h \
    OSS/Crypto/FileEncryptor.h \
    OSS/Crypto/OSSCrypto.h \
    OSS/CLI/Client.h \
    OSS/CLI/Command.h \
    OSS/CLI/Service.h \
    OSS/Persistent/ClassType.h \
    OSS/Persistent/DataType.h \
    OSS/Persistent/Persistent.h \
    OSS/Persistent/Reference.h \
    OSS/SDP/rfc4566.txt \
    OSS/SDP/SDP.h \
    OSS/SDP/SDPHeader.h \
    OSS/SDP/SDPHeaderList.h \
    OSS/SDP/SDPMedia.h \
    OSS/SDP/SDPSession.h \
    OSS/SIP/Parser.h \
    OSS/SIP/ReSIPMessage.h \
    OSS/SIP/SIPAuthorization.h \
    OSS/SIP/SIPContact.h \
    OSS/SIP/SIPCSeq.h \
    OSS/SIP/SIPDigestAuth.h \
    OSS/SIP/SIPFrom.h \
    OSS/SIP/SIPHeaderTokens.h \
    OSS/SIP/SIPMessage.h \
    OSS/SIP/SIPParser.h \
    OSS/SIP/SIPParserException.h \
    OSS/SIP/SIPProxyAuthenticate.h \
    OSS/SIP/SIPRequestLine.h \
    OSS/SIP/SIPRoute.h \
    OSS/SIP/SIPStatusLine.h \
    OSS/SIP/SIPURI.h \
    OSS/SIP/SIPVia.h \
    OSS/SIP/SIPTLSConnection.h \
    OSS/SIP/SIPXOR.h \
    OSS/SIP/SIP.h \
    OSS/SIP/SIPFSMDispatch.h \
    OSS/SIP/OSSSIP.h \
    OSS/SIP/SIPListener.h \
    OSS/SIP/SIPFsm.h \
    OSS/SIP/SIPTransportSession.h \
    OSS/SIP/SIPTCPListener.h \
    OSS/SIP/SIPTransportRateLimitStrategy.h \
    OSS/SIP/SIPTransactionPool.h \
    OSS/SIP/SIPTransaction.h \
    OSS/SIP/SIPTLSConnectionManager.h \
    OSS/SIP/SIPNict.h \
    OSS/SIP/SIPIst.h \
    OSS/SIP/SIPIct.h \
    OSS/SIP/SIPTLSListener.h \
    OSS/SIP/SIPUDPListener.h \
    OSS/SIP/SIPIstPool.h \
    OSS/SIP/SIPTransportService.h \
    OSS/SIP/SIPTCPConnection.h \
    OSS/SIP/SIPUDPConnectionClone.h \
    OSS/SIP/SIPNictPool.h \
    OSS/SIP/SIPIctPool.h \
    OSS/SIP/SIPNist.h \
    OSS/SIP/SIPTransactionTimers.h \
    OSS/SIP/SIPException.h \
    OSS/SIP/SIPUDPConnection.h \
    OSS/SIP/SIPTCPConnectionManager.h \
    OSS/SIP/SIPNistPool.h \
    OSS/SIP/B2BUA/B2BUA.h \
    OSS/SIP/B2BUA/SIPB2BClientTransaction.h \
    OSS/SIP/B2BUA/SIPB2BHandler.h \
    OSS/SIP/B2BUA/SIPB2BScriptableHandler.h \
    OSS/SIP/B2BUA/SIPB2BTransaction.h \
    OSS/SIP/B2BUA/SIPB2BTransactionManager.h \
    OSS/STUN/VovidaSTUN.inl \
    OSS/STUN/VovidaUDP.h \
    OSS/STUN/STUNMappedAddress.h \
    OSS/STUN/STUN.h \
    OSS/STUN/STUNClient.h \
    OSS/STUN/VovidaUDP.inl \
    OSS/STUN/STUNProto.h \
    OSS/STUN/VovidaSTUN.h \
    OSS/STUN/STUNServer.h \
    OSS/JS/JS.h \
    OSS/JS/JSBase.h \
    OSS/JS/JSSIPMessage.h


    
    


DISTCLEANFILES = Makefile.in
