TESTS = oss_core-unit-test
check_PROGRAMS = oss_core-unit-test

oss_core_unit_test_SOURCES = \
	unit_test/TestSuite.cpp \
	unit_test/TestSemaphore.cpp \
	unit_test/TestRequestLine.cpp \
	unit_test/TestBasicParser.cpp \
	unit_test/TestSDP.cpp \
	unit_test/TestCSeq.cpp \
	unit_test/TestCache.cpp \
	unit_test/TestFoundationAPI.cpp \
	unit_test/TestVia.cpp \
	unit_test/TestContact.cpp \
	unit_test/TestRouteHeader.cpp \
	unit_test/TestFrom.cpp \
	unit_test/TestPersistent.cpp \
	unit_test/TestDNS.cpp \
	unit_test/TestSIPURI.cpp \
	unit_test/TestRTPPacket.cpp \
	unit_test/TestFirewall.cpp \
	unit_test/TestKeyValueStore.cpp \
	unit_test/TestAccessControl.cpp \
	unit_test/TestReplaces.cpp \
	unit_test/TestTransport.cpp \
	unit_test/TestUaRegister.cpp \
	unit_test/TestDigestAuth.cpp \
	unit_test/TestRedisPubSub.cpp \
	unit_test/TestZMQSocket.cpp \
	unit_test/TestBSON.cpp \
	unit_test/TestRaftConsensus.cpp \
	unit_test/TestLMDB.cpp \
	unit_test/TestRTNLRoute.cpp

