nobase_includeHEADERS_INSTALL = $(INSTALL) -D -p -c -m 644
nobase_include_HEADERS = \
    udns.h \
    udnspp/dnsarecord.h  \
    udnspp/dnscache.h  \
    udnspp/dnscontext.h  \
    udnspp/dnsmxrecord.h  \
    udnspp/dnsnaptrrecord.h  \
    udnspp/dnsptrrecord.h  \
    udnspp/dnsresolver.h  \
    udnspp/dnsrrcommon.h  \
    udnspp/dnssrvrecord.h  \
    udnspp/dnstxtrecord.h