bin_PROGRAMS = sha1_keygen test bighost bigtest monitor bignode sender receiver dhttest dht
LDADD = -L$(top_srcdir)/src -lchimera -lpthread -lcrypto
INCLUDES = -I$(top_srcdir)/include

sha1_keygen_SOURCES = sha1_keygen.c
test_SOURCES = test.c
sender_SOURCES = sender.c
receiver_SOURCE = receiver.c
bighost_SOURCE = bighost.c
bigtest_SOURCE = bigtest.c
monitor_SOURCE = monitor.c
bignode_SOURCE = bignode.c	
bignode_SOURCE = bignode.c	
dht_SOURCE = dht.c
dhttest_SOURCE = dhttest.c
